--- a/www/css/index.css
+++ b/www/css/index.css
@@ -48,13 +48,69 @@ body {
                                    /* offset horizontal: half of text area width */
 }
 
+.overview {
+    background:none; /* 170px x 200px */
+    position:absolute;             /* position in the center of the screen */
+    left:50%;
+    top:5 px;
+    height:50px;                   /* text area height */
+    width:225px;                   /* text area width */
+    text-align:center;
+    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
+                                   /* offset horizontal: half of text area width */
+}
+.button {
+    background:none; /* 170px x 200px */
+    position:fixed;             /* position in the center of the screen */
+    left:50%;
+    top:50 px;
+    height:50px;                   /* text area height */
+    width:225px;                   /* text area width */
+    text-align:center;
+	position: fixed;
+    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
+                                   /* offset horizontal: half of text area width */
+}
+
+li {
+    list-style: none;
+}
+
+a, a:hover, a:visited, a:active {
+    color: #FF0000;
+}
+
 h1 {
-    font-size:24px;
-    font-weight:normal;
-    margin:0px;
+	font-family: didot;
+    font-size:20px;
+    font-weight:bold;
+    margin-top: 15px;
     overflow:visible;
     padding:0px;
     text-align:center;
+	color: blue;
+}
+
+h2 {
+	font-family: didot;
+    font-size:20px;
+    font-weight:bold;
+    margin-top: 15px;
+    overflow:visible;
+    padding:0px;
+    text-align:center;
+	color: blue;
+}
+h3 {
+	font-family: didot;
+    font-size:20px;
+    font-weight:bold;
+    margin-top: 15px;
+	padding:0px;
+    text-align:center;
+	color: blue;
 }
 
 .event {
