--- a/www/css/index.css
+++ b/www/css/index.css
@@ -25,18 +25,19 @@ body {
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
     margin:0px;
     padding:0px;
     text-transform:uppercase;
     width:100%;
+	background-color: #202020;
 }
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
+    background:url(../img/logo2.png) no-repeat center top; /* 170px x 200px */
     position:absolute;             /* position in the center of the screen */
     left:50%;
     top:50%;
@@ -49,7 +50,7 @@ body {
 }
 
 #overview {
-    background:gray; /* 170px x 200px */
+    background:#e77471; /* 170px x 200px */
     width:100%;                   /* text area width */
     text-align:center;
     padding:5px 0px 5px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
@@ -71,7 +72,7 @@ li {
 }
 
 a, a:hover, a:visited, a:active {
-    color: #FF0000;
+    color: white;
 }
 
 h1 {
@@ -81,19 +82,19 @@ h1 {
     overflow:visible;
     padding:0px;
     text-align:center;
-	color: blue;
+	color: black;
 }
 
 h2 {
     font-size:20px;
     font-weight:bold;
-	color: blue;
+	color: white;
 }
 h3 {
     font-size:15px;
     margin-top: 5px;
     font-weight:bold;
-	color: red;
+	color: #e77471;
 }
 
 .event {
